mas funciones para el pmv
