# PawApi/Controllers/DTOs/CuidadorDto.cs
@@ -10,6 +10,9 @@ namespace PawApi.Controllers.DTOs
         public int Id { get; set; }
         public string Telefono { get; set; }
         public decimal Puntuaje { get; set; }
+        public string FotoPerfil { get; set; }
+        public string DescripcionServicio { get; set; }
+        public int? UsuarioId { get; set; }
         public IEnumerable<HogarTemporalDto> HogarTemporals { get; set; }
         public IEnumerable<ReseniumDto> Resenia { get; set; }
         public IEnumerable<CuidadorMascotaDto> CuidadorMascota { get; set; }
