# PawApi/bin/Debug/net5.0/swagger.json
@@ -72,6 +72,26 @@
         }
       }
     },
+    "/api/Cuidador/EstadiasByPersona": {
+      "get": {
+        "tags": [
+          "Cuidador"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "personaID",
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Especies": {
       "get": {
         "tags": [
@@ -133,6 +153,43 @@
           "text/plain",
           "application/json",
           "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/UsuarioDto"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/login/User": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/CreacionUsuarioDto"
+            }
+          }
         ],
         "responses": {
           "200": {
@@ -215,7 +272,7 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/SolicitudDto"
+              "$ref": "#/definitions/Result"
             }
           }
         }
@@ -241,29 +298,6 @@
         "responses": {
           "200": {
             "description": "Success"
-          }
-        }
-      }
-    },
-    "/WeatherForecast": {
-      "get": {
-        "tags": [
-          "WeatherForecast"
-        ],
-        "produces": [
-          "text/plain",
-          "application/json",
-          "text/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/WeatherForecast"
-              }
-            }
           }
         }
       }
@@ -390,18 +424,32 @@
         }
       }
     },
-    "UsuarioDto": {
+    "PersonaDto": {
       "type": "object",
       "properties": {
         "id": {
           "format": "int32",
           "type": "integer"
         },
-        "usuario1": {
+        "nompreApellido": {
           "type": "string"
         },
-        "contraseña": {
-          "type": "string"
+        "dni": {
+          "format": "int64",
+          "type": "integer"
+        },
+        "usuarioId": {
+          "format": "int32",
+          "type": "integer"
+        }
+      }
+    },
+    "UsuarioDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
         },
         "correo": {
           "type": "string"
@@ -416,6 +464,38 @@
         "estadoId": {
           "format": "int32",
           "type": "integer"
+        },
+        "personas": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/PersonaDto"
+          }
+        }
+      }
+    },
+    "CreacionUsuarioDto": {
+      "type": "object",
+      "properties": {
+        "usuario": {
+          "type": "string"
+        },
+        "correo": {
+          "type": "string"
+        },
+        "contraseña": {
+          "type": "string"
+        },
+        "nombreYApellido": {
+          "type": "string"
+        },
+        "provincia": {
+          "type": "string"
+        },
+        "localidad": {
+          "type": "string"
+        },
+        "domicilio": {
+          "type": "string"
         }
       }
     },
@@ -431,6 +511,69 @@
         }
       }
     },
+    "HogarTemporalDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "direccion": {
+          "type": "string"
+        },
+        "localidad": {
+          "type": "string"
+        },
+        "provincia": {
+          "type": "string"
+        },
+        "tipoHogarId": {
+          "format": "int32",
+          "type": "integer"
+        }
+      }
+    },
+    "ReseniumDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "resenia": {
+          "type": "string"
+        },
+        "puntuacion": {
+          "format": "double",
+          "type": "number"
+        },
+        "estadiaId": {
+          "format": "int32",
+          "type": "integer"
+        }
+      }
+    },
+    "CuidadorMascotaDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "especieId": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "cantidad": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "precioUnitarioDiario": {
+          "format": "double",
+          "type": "number"
+        }
+      }
+    },
     "FotoDto": {
       "type": "object",
       "properties": {
@@ -440,6 +583,72 @@
         },
         "path": {
           "type": "string"
+        }
+      }
+    },
+    "FotoCuidadorDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "fotoId": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "foto": {
+          "$ref": "#/definitions/FotoDto"
+        }
+      }
+    },
+    "CuidadorDto": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "telefono": {
+          "type": "string"
+        },
+        "puntuaje": {
+          "format": "double",
+          "type": "number"
+        },
+        "fotoPerfil": {
+          "type": "string"
+        },
+        "descripcionServicio": {
+          "type": "string"
+        },
+        "usuarioId": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "hogarTemporals": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/HogarTemporalDto"
+          }
+        },
+        "resenia": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ReseniumDto"
+          }
+        },
+        "cuidadorMascota": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/CuidadorMascotaDto"
+          }
+        },
+        "fotoCuidadors": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/FotoCuidadorDto"
+          }
         }
       }
     },
@@ -473,6 +682,9 @@
         "cuidadorId": {
           "format": "int32",
           "type": "integer"
+        },
+        "cuidador": {
+          "$ref": "#/definitions/CuidadorDto"
         },
         "usuarioId": {
           "format": "int32",
@@ -510,26 +722,8 @@
           "items": {
             "$ref": "#/definitions/FotoSolicitudDto"
           }
-        }
-      }
-    },
-    "WeatherForecast": {
-      "type": "object",
-      "properties": {
-        "date": {
-          "format": "date-time",
-          "type": "string"
         },
-        "temperatureC": {
-          "format": "int32",
-          "type": "integer"
-        },
-        "temperatureF": {
-          "format": "int32",
-          "type": "integer",
-          "readOnly": true
-        },
-        "summary": {
+        "estado": {
           "type": "string"
         }
       }
